--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ src/battle/app/fingerzen/temp/
 src/battle/app/labelcarrote/*
 src/battle/app/flipapart/*
 src/battle/app/pipix/*
+src/battle/vendor/*
